--- a/style2.css
+++ b/style2.css
@@ -8,7 +8,10 @@
     p {
         font-size: 1rem;
     }
-
+    .company-logo{
+        margin-top: 40px;
+    }
+    
     .primary-button {
         padding: 8px 18px;
     }
